...
    <string name="scan_qr_code">Bitte QR-Code scannen</string>
    <string name="scan_letter_qr_code">Bitte Aktivierungsbrief scannen</string>
    <string name="scan_email_qr_code">Bitte Aktivierungs-E-Mail scannen</string>

    <string name="device_auth_failed">Authentifizierung fehlgeschlagen</string>

    <string name="repeat">Erneut versuchen</string>

    <string name="missing_security_patches_title">Sicherheitshinweis</string>
    <string name="missing_security_patches_description">"Auf diesem Gerät sind keine aktuellen Android-Sicherheitsupdates installiert. Dies kann ein Sicherheitsrisiko darstellen!\n\nBitte nutzen Sie Banking-Anwendungen möglichst auf einem aktuellen Gerät, damit Sicherheitsprobleme durch den Hersteller behoben werden können.\n\nEinzelne Gerätehersteller stellen Betriebssystem-Updates verzögert oder
    <string name="ignore_and_continue">Fortsetzen</string>
    <string name="update_settings">Update-Einstellungen…</string>

...
    <string name="initial_tan">Start-TAN</string>
    <string name="enter_initial_tan">Bitte geben Sie diese Start-TAN im Online-Banking ein.</string>
    <string name="initialization_completed">Die activeTAN-Aktivierung ist damit abgeschlossen.</string>
    <string name="initialization_confirm_cancel_title">Aktivierung abbrechen?</string>
    <string name="initialization_confirm_cancel_message">Die Seriennummer geht verloren und die Aktivierung muss auch im Online-Banking abgebrochen werden.</string>
    <string name="initialization_confirm_quit_title">Aktivierung beenden?</string>
    <string name="initialization_confirm_quit_message">Haben Sie die Start-TAN bereits im Online-Banking eingegeben?</string>
    <string name="confirm_return">Zurück</string>
    <string name="initialization_multiple_generators_title">Mehrfache Aktivierung</string>
    <string name="initialization_multiple_generators_description">Sie haben diese App mehrfach aktiviert. Verschiedene TAN-Generatoren können im Menü „Einstellungen“ verwaltet werden.</string>
    <string name="initialization_mandatory_user_auth_title">Hinweis</string>
    <string name="initialization_mandatory_user_auth_description">Leider unterstützt Ihr Android-Modell keine TAN-Generierung ohne zusätzliche Authentifizierung. Sie können diese activeTAN-App normal aktivieren, allerdings müssen bei jeder TAN-Generierung Ihre Gerätezugungsdaten geprüft werden (Biometrie, Muster, PIN oder Passwort).</string>

    <string name="initialization_failed_title">Aktivierung fehlgeschlagen</string>
    <string name="initialization_failed_unprotected_device">Das Smartphone muss mit einem Muster, einer PIN oder einem Kennwort geschützt sein (Sperrbildschirm).</string>
    <string name="initialization_failed_incompatible_device">Der TAN-Generator kann nicht sicher gespeichert werden, leider ist dieses Gerät inkompatibel. Bitte wenden Sie sich unter Angabe des Smartphone-Modells an Ihre Bank.</string>
    <string name="initialization_failed_missing_user_auth">Das Smartphone wurde nach Aktivierung des Sperrbildschirms nicht entsperrt. Bei den meisten Geräten kann dies einfach nachgeholt werden. Falls dies nicht geholfen hat, muss das Gerät leider neu gestartet werden (Ein-/Aus-Taste lange drücken).</string>
    <string name="initialization_failed_no_camera_permission">Kein Zugriff auf die Kamera gestattet. Die Kamera wird für das Lesen von QR-Codes benötigt.</string>
    <string name="initialization_failed_offline">Während der Aktivierung ist eine Internetverbindung erforderlich.</string>
    <string name="initialization_failed_wrong_letter">Bitte prüfen Sie, ob Sie Ihren aktuellen Aktivierungsbrief benutzen und wiederholen Sie den Vorgang.</string>
    <string name="initialization_failed_wrong_email">Bitte prüfen Sie, ob Sie Ihren aktuelle Aktivierungs-E-Mail benutzen und wiederholen Sie den Vorgang.</string>
    <string name="initialization_failed_wrong_serial">Im Online-Banking wurde eine abweichende Seriennummer eingegeben. Möchten Sie den Vorgang wiederholen?</string>
    <string name="initialization_failed_wrong_qr_code">Falscher QR-Code</string>
    <string name="initialization_failed_outdated">Es ist leider erforderlich, dass Sie die activeTAN-App aktualisieren.</string>
    <string name="initialization_failed_communication">Bei der Kommunikation mit Ihrer Bank ist ein technischer Fehler aufgetreten. Bitte überprüfen Sie Ihre Internetverbindung. Möchten Sie den Vorgang wiederholen?</string>
    <string name="initialization_failed_unknown_reason">Es ist ein technischer Fehler aufgetreten. Bitte probieren Sie es später erneut.</string>
    <string name="initialization_failed_keystore">Der TAN-Generator kann nicht sicher gespeichert werden. Bitte prüfen Sie Ihre Geräte-Sicherheitseinstellungen.</string>
    <string name="initialization_failed_tan_computation">Es ist ein technischer Fehler bei der TAN-Berechnung aufgetreten. Bitte probieren Sie es später erneut.</string>

...
