...

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/buttonContinue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
...
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="8dp"
                        android:text="@string/label_serial_number"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
                        android:textColor="?attr/colorOnSurface"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="@+id/serialNumber"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/serialNumber"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
...
