...
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="8dp">


                <TextView
                    android:id="@+id/initialTAN"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAlignment="textEnd"
                    android:textAppearance="@style/AppTheme.TextAppearance.TAN"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
...
